--- a/app/views/v2/employer/api/api-list.html
+++ b/app/views/v2/employer/api/api-list.html
@@ -16,7 +16,7 @@ List of APIs - Apprenticeship services - GOV.UK
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">List of APIs</h1>
       <p class="govuk-body" id="recruitment-api-live">
-        <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API (Live)</a>
+        <a href="api-subscribe?api=recruitment-api" class="govuk-link govuk-link--no-visited-state">Recruitment API (Live)</a>
       </p>
       <ul class="govuk-list govuk-list-bullet">
         <li></li>
