--- a/app/views/v2/employer/home.html
+++ b/app/views/v2/employer/home.html
@@ -57,7 +57,7 @@ GOV.UK Prototype Kit
             </div>
             <div class=" govuk-grid-column-one-half">
               <h3 class="govuk-heading-m">
-                <a href="dashboard?user=employer">Recruitment</a>
+                <a href="dashboard">Recruitment</a>
               </h3>
               <p>Recruit an apprentice by creating a vacancy. This vacancy will be advertised on Find an apprenticeship.</p>
             </div>
