--- a/app/views/v2/_summary.html
+++ b/app/views/v2/_summary.html
@@ -44,7 +44,7 @@
             <li><a href="https://docs.google.com/document/d/1C0CbUWJhSAsscA6SgVbKNQbaKJP3zjmQH6ZQzMe2rDY/edit" class="govuk-link govuk-link--no-visited-state">Provider dashboard</a></li>-->
           <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Protoype links</h4>                            
             <li><a href="v2/guidance/api" class="govuk-link govuk-link--no-visited-state">gov.uk guidance</a></li>     
-            <li><a href="v2/employer/dashboard" class="govuk-link govuk-link--no-visited-state">Employer service (post-signin)</a></li>
+            <li><a href="v2/employer/home" class="govuk-link govuk-link--no-visited-state">Employer service (post-signin)</a></li>
             <li><a href="v2/provider/account-home" class="govuk-link govuk-link--no-visited-state">Provider service (post-signin)</a></li>
         </ul>
   </div>
