#124 - FAA Start page content - added related content and urls to links

--- a/app/views/v2/faa/start-page.html
+++ b/app/views/v2/faa/start-page.html
@@ -38,8 +38,8 @@
           <div class="related-navigation">
             <h2 class="govuk-heading-s">Related content</h2>
             <ul class="govuk-list related-links">
-              <li class="govuk-body-s"><a href="https://www.gov.uk/become-apprentice">Become an apprentice</a></li>
-              <li class="govuk-body-s"><a href="https://www.gov.uk/find-traineeship">Find a traineeship</a></li>
+              <li class="govuk-body-s"><a href="https://www.gov.uk/become-apprentice" class="govuk-link govuk-link--no-visited-state">Become an apprentice</a></li>
+              <li class="govuk-body-s"><a href="https://www.gov.uk/find-traineeship" class="govuk-link govuk-link--no-visited-state">Find a traineeship</a></li>
             </ul>
           </div>   
         </div>
@@ -65,9 +65,9 @@
               <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-topics-aa1f7cc8">
                 <h2 class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer">Explore the topic</h2>          
                 <ul class="gem-c-related-navigation__link-list">
-                  <li class="gem-c-related-navigation__link"><a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--footer" href="https://www.gov.uk/browse/education/find-course">Apprenticeships, 14 to 19 education and training for work</a></li>
-                  <li class="gem-c-related-navigation__link"><a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--footer" href="https://www.gov.uk/browse/working/finding-job">Finding a job</a></li>
-                  <li class="gem-c-related-navigation__link"><a class="govuk-link govuk-link gem-c-related-navigation__section-link govuk-link gem-c-related-navigation__section-link--footer" href="https://www.gov.uk/topic/further-education-skills/apprenticeships">Apprenticeships</a></li>
+                  <li class="gem-c-related-navigation__link"><a class="govuk-link govuk-link--no-visited-state gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="https://www.gov.uk/browse/education/find-course">Apprenticeships, 14 to 19 education and training for work</a></li>
+                  <li class="gem-c-related-navigation__link"><a class="govuk-link govuk-link--no-visited-state gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="https://www.gov.uk/browse/working/finding-job">Finding a job</a></li>
+                  <li class="gem-c-related-navigation__link"><a class="govuk-link govuk-link--no-visited-state gem-c-related-navigation__section-link gem-c-related-navigation__section-link--footer" href="https://www.gov.uk/topic/further-education-skills/apprenticeships">Apprenticeships</a></li>
                 </ul>
               </nav>       
             </div>          
