--- a/app/views/v2/employer/api/api-subscribed.html
+++ b/app/views/v2/employer/api/api-subscribed.html
@@ -6,7 +6,7 @@ API hub - Manage apprenticeships - GOV.UK
 {% block beforeContent %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+      <a href="api-list" class="govuk-back-link">Back to API list</a>
   </div>
 </div>
 {% endblock %}
@@ -17,7 +17,7 @@ API hub - Manage apprenticeships - GOV.UK
     {{ govukPanel({
       titleText: "Successfully suscribed to API"      
     }) }}
-    <h1 class="govuk-heading-xl">Create keys for APIs</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-top-9">Create keys for APIs</h1>
       <p class="govuk-body">
         You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
       </p>
