--- a/app/views/v2/employer/api/api-list.html
+++ b/app/views/v2/employer/api/api-list.html
@@ -25,7 +25,7 @@ List of APIs - Apprenticeship services - GOV.UK
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell">
+          <td class="govuk-table__cell" id="display-adverts-api">
             Display adverts API
           </td>
           <td class="govuk-table__cell">
@@ -66,6 +66,21 @@ List of APIs - Apprenticeship services - GOV.UK
           <td class="govuk-table__cell">
             <a href="api-hub?api=recruitment-api-sandbox" class="govuk-link govuk-link--no-visited-state">
               View
+            </a>  
+          </td>
+        </tr>
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell">
+            Example API (Live)
+          </td>
+          <td class="govuk-table__cell">
+            <strong class="govuk-tag govuk-tag--grey">
+              Not subscribed
+            </strong>    
+          </td>
+          <td class="govuk-table__cell">
+            <a href="no-permission" class="govuk-link govuk-link--no-visited-state">
+              Subscribe
             </a>  
           </td>
         </tr>
