--- a/app/views/v2/guidance/api-hub-new-key.html
+++ b/app/views/v2/guidance/api-hub-new-key.html
@@ -48,7 +48,7 @@ API key renewed - API hub - Manage apprenticeships - GOV.UK
                     </a>
                   </dd>
                 </div>            
-                <div class="govuk-summary-list__row">
+                <!--<div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
                     Key name
                   </dt>
@@ -56,7 +56,7 @@ API key renewed - API hub - Manage apprenticeships - GOV.UK
                     display-advert-api
                   </dd>
                   <dd class="govuk-summary-list__actions"></dd>
-                </div>
+                </div>-->
               </dl>
               <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
