--- a/app/views/v2/guidance/api-list.html
+++ b/app/views/v2/guidance/api-list.html
@@ -8,27 +8,32 @@ List of APIs - Apprenticeship services - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">List of APIs</h1>
-      <p class="govuk-body">
-        <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API (Live)</a>
-      </p>
-      <ul class="govuk-list govuk-list-bullet">
-        <li></li>
-        <li></li>
-      </ul>
-      <p class="govuk-body">
-        <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API (Sandbox)</a>
-      </p>
-      <ul class="govuk-list govuk-list-bullet">
-        <li></li>
-        <li></li>
-      </ul>
-      <p class="govuk-body">
-        <a href="display-adverts-api-key" class="govuk-link govuk-link--no-visited-state">Display adverts API</a>
-      </p>
-      <ul class="govuk-list govuk-list-bullet">
-        <li></li>
-        <li></li>
-      </ul>
+    <table class="govuk-table">
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th class="govuk-table__header" scope="col"> API name </th>
+          <th class="govuk-table__header" scope="col"> Status </th>
+          <th class="govuk-table__header" scope="col"> Action </th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell" id="display-adverts-api">
+            Display adverts API
+          </td>
+          <td class="govuk-table__cell">
+            <strong class="govuk-tag govuk-tag--grey">
+              Not subscribed
+            </strong>    
+          </td>
+          <td class="govuk-table__cell">
+            <a href="api-subscribe" class="govuk-link govuk-link--no-visited-state">
+              Subscribe
+            </a>  
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
 {% endblock %}
