--- a/app/views/v2/guidance/api-subscribed.html
+++ b/app/views/v2/guidance/api-subscribed.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Display adverts API key - Apprenticeship service - GOV.UK
+API hub - Manage apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+      <a href="api-list" class="govuk-back-link">Back to API list</a>
   </div>
 </div>
 {% endblock %}
@@ -14,6 +14,9 @@ Display adverts API key - Apprenticeship service - GOV.UK
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+    {{ govukPanel({
+      titleText: "Successfully suscribed to API"      
+    }) }}
     <h1 class="govuk-heading-xl">Display adverts API key</h1>
       <p class="govuk-body">
         You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
