--- a/app/views/v2/employer/api/api-hub-copied.html
+++ b/app/views/v2/employer/api/api-hub-copied.html
@@ -14,9 +14,9 @@ API key copied - API hub - Manage apprenticeships - GOV.UK
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {{ govukPanel({
+    <!--{{ govukPanel({
       titleText: "Key copied"      
-    }) }}
+    }) }}-->
         <h1 class="govuk-heading-xl">Create keys for APIs</h1>
           <p class="govuk-body">
             You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
@@ -37,7 +37,7 @@ API key copied - API hub - Manage apprenticeships - GOV.UK
             <div class="app-summary-card--content">
               <p class="govuk-body">
                 Create an advert on any website and Find an apprenticeship.<br>
-                Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
+                Give the key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
               </p>
               <dl class="govuk-summary-list govuk-summary-list__m">
                 <div class="govuk-summary-list__row">
@@ -48,10 +48,10 @@ API key copied - API hub - Manage apprenticeships - GOV.UK
                     <code style="color:darkred; font-size:14px;">99cfbdeb64f14277ac33d4dd06640ede</code>
                   </dd>
                   <dd class="govuk-summary-list__actions">                    
-                      Copied
+                      Key copied
                   </dd>
                 </div>            
-                <div class="govuk-summary-list__row">
+                <!--<div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
                     Key name
                   </dt>
@@ -60,7 +60,7 @@ API key copied - API hub - Manage apprenticeships - GOV.UK
                   </dd>
                   <dd class="govuk-summary-list__value">                
                   </dd>
-                </div>
+                </div>-->
               </dl>
               <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
@@ -74,7 +74,7 @@ API key copied - API hub - Manage apprenticeships - GOV.UK
               </details>
             </div>
           </div>
-          <div class="app-summary-card ">
+          <!--<div class="app-summary-card ">
             <header class="app-summary-card--header">
               <h3 class="app-summary-card--title">Recruitment API (Sandbox)</h3>
               <div class="app-summary-card__actions">
@@ -168,7 +168,7 @@ API key copied - API hub - Manage apprenticeships - GOV.UK
                 </div>
               </details>
             </div>
-          </div>
+          </div>-->
        </div>
     </div>
   </div>
