--- a/app/views/v2/employer/api/api-hub.html
+++ b/app/views/v2/employer/api/api-hub.html
@@ -34,7 +34,7 @@ API hub - Manage apprenticeships - GOV.UK
         <div class="app-summary-card--content">
           <p class="govuk-body">
             Create an advert on any website and Find an apprenticeship.<br>
-            Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
+            Give the key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
           </p>
           <dl class="govuk-summary-list govuk-summary-list__m">
             <div class="govuk-summary-list__row">
@@ -50,16 +50,6 @@ API hub - Manage apprenticeships - GOV.UK
                 </a>
               </dd>
             </div>            
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Key name
-              </dt>
-              <dd class="govuk-summary-list__value">
-                recruitment-api-live
-              </dd>
-              <dd class="govuk-summary-list__value">                
-              </dd>
-            </div>
           </dl>
           <details class="govuk-details" data-module="govuk-details">
             <summary class="govuk-details__summary">
@@ -73,7 +63,7 @@ API hub - Manage apprenticeships - GOV.UK
           </details>
         </div>
       </div>
-      <div class="app-summary-card ">
+      <!--<div class="app-summary-card ">
         <header class="app-summary-card--header">
           <h3 class="app-summary-card--title">Recruitment API (Sandbox)</h3>
           <div class="app-summary-card__actions">
@@ -169,7 +159,7 @@ API hub - Manage apprenticeships - GOV.UK
         </div>
       </div>
 
-      <!--<h2 class="govuk-heading-m">Recruitment API (Live)</h2>
+      <h2 class="govuk-heading-m">Recruitment API (Live)</h2>
       <p class="govuk-body">
         Create an advert on any website and Find an apprenticeship.<br>
         Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer
