--- a/app/views/v2/employer/api/api-list.html
+++ b/app/views/v2/employer/api/api-list.html
@@ -19,19 +19,13 @@ List of APIs - Apprenticeship services - GOV.UK
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th class="govuk-table__header" scope="col"> API name </th>
-          <th class="govuk-table__header" scope="col"> Status </th>
           <th class="govuk-table__header" scope="col"> Action </th>
         </tr>
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="display-adverts-api">
-            Display adverts API
-          </td>
-          <td class="govuk-table__cell">
-            <strong class="govuk-tag">
-              Subscribed
-            </strong>    
+            Display adverts API (Live)
           </td>
           <td class="govuk-table__cell">
             <a href="api-hub?api=display-adverts-api" class="govuk-link govuk-link--no-visited-state">
@@ -42,26 +36,16 @@ List of APIs - Apprenticeship services - GOV.UK
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
             Recruitment API (Live)
-          </td>
+          </td>          
           <td class="govuk-table__cell">
-            <strong class="govuk-tag govuk-tag--grey">
-              Not subscribed
-            </strong>    
-          </td>
-          <td class="govuk-table__cell">
-            <a href="api-subscribe" class="govuk-link govuk-link--no-visited-state">
-              Subscribe
+            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+              Get key
             </a>    
           </td>
         </tr>
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
             Recruitment API (Sandbox)
-          </td>
-          <td class="govuk-table__cell">
-            <strong class="govuk-tag">
-              Subscribed
-            </strong>    
           </td>
           <td class="govuk-table__cell">
             <a href="api-hub?api=recruitment-api-sandbox" class="govuk-link govuk-link--no-visited-state">
@@ -74,13 +58,8 @@ List of APIs - Apprenticeship services - GOV.UK
             Example API (Live)
           </td>
           <td class="govuk-table__cell">
-            <strong class="govuk-tag govuk-tag--grey">
-              Not subscribed
-            </strong>    
-          </td>
-          <td class="govuk-table__cell">
             <a href="no-permission" class="govuk-link govuk-link--no-visited-state">
-              Subscribe
+              Get key
             </a>  
           </td>
         </tr>
