--- a/app/views/v2/employer/api/api-hub-new-key.html
+++ b/app/views/v2/employer/api/api-hub-new-key.html
@@ -38,7 +38,7 @@ API key renewed - API hub - Manage apprenticeships - GOV.UK
             <div class="app-summary-card--content">
               <p class="govuk-body">
                 Create an advert on any website and Find an apprenticeship.<br>
-                Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
+                Give the key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
               </p>
               <dl class="govuk-summary-list govuk-summary-list__m">
                 <div class="govuk-summary-list__row">
