--- a/app/views/v2/employer/home.html
+++ b/app/views/v2/employer/home.html
@@ -57,9 +57,9 @@ GOV.UK Prototype Kit
             </div>
             <div class=" govuk-grid-column-one-half">
               <h3 class="govuk-heading-m">
-                <a href="dashboard">Recruitment</a>
+                <a href="dashboard">Your apprenticeship adverts</a>
               </h3>
-              <p>Recruit an apprentice by creating a vacancy. This vacancy will be advertised on Find an apprenticeship.</p>
+              <p>Create adverts to post on find an apprenticeship, view applications, your previous adverts and adverts created by training providers.</p>
             </div>
             <div class=" govuk-grid-column-one-half">
               <h3 class="govuk-heading-m"><a href="providers">Training provider permissions</a></h3>
