#128 API subscriptions and #129 API permissions

--- a/app/views/v2/_summary.html
+++ b/app/views/v2/_summary.html
@@ -43,9 +43,9 @@
           <p class="govuk-body govuk-!-margin-top-4">Provider API key</p> 
             <li><a href="https://docs.google.com/document/d/1C0CbUWJhSAsscA6SgVbKNQbaKJP3zjmQH6ZQzMe2rDY/edit" class="govuk-link govuk-link--no-visited-state">Provider dashboard</a></li>-->
           <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Protoype links</h4>                            
-            <li><a href="v2/guidance/api" class="govuk-link govuk-link--no-visited-state">gov.uk guidance</a></li>     
-            <li><a href="v2/employer/home" class="govuk-link govuk-link--no-visited-state">Employer service (post-signin)</a></li>
-            <li><a href="v2/provider/account-home" class="govuk-link govuk-link--no-visited-state">Provider service (post-signin)</a></li>
+            <li><a href="v2/guidance/api" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance</a></li>     
+            <li><a href="v2/employer/login" class="govuk-link govuk-link--no-visited-state">Employer service (starts at Sign in)</a></li>
+            <li><a href="v2/provider/login" class="govuk-link govuk-link--no-visited-state">Provider service (starts at Sign in)</a></li>
         </ul>
   </div>
 </div>
