--- a/app/views/v2/provider/api/api-subscribe.html
+++ b/app/views/v2/provider/api/api-subscribe.html
@@ -1,14 +1,15 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Confirm renewal of API key - Apprenticeships - GOV.UK
+Are you sure you want to subscribe to this API? - Apprenticeships - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
-{{ govukBackLink({
-  text: "Back",
-  href: "javascript: window.history.go(-1)"
-}) }}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+  </div>
+</div>
 {% endblock %}
 
 {% block content %}
@@ -22,17 +23,14 @@ Confirm renewal of API key - Apprenticeships - GOV.UK
         {
           legend:
           {
-            text: "Are you sure you want to renew this key?",
+            text: "Are you sure you want to subscribe to this API?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--xl govuk-!-margin-bottom-6"
           }
         },
-        hint: {
-          text: "Renewing the key will disable the previous key and will stop your API from working until you use the new key."
-        },
         items: [
         {
-          value: "yes~api-hub-new-key",
+          value: "yes~api-subscribed",
           text: "Yes",
           attributes:
           {
@@ -40,7 +38,7 @@ Confirm renewal of API key - Apprenticeships - GOV.UK
           }
         },
         {
-          value: "no~api-hub",
+          value: "no~api-list",
           text: "No"
         }
         ]
@@ -51,7 +49,7 @@ Confirm renewal of API key - Apprenticeships - GOV.UK
           text: "Continue"
         })}}
       </p>
-    </form>
+    </form>     
   </div>
-
-  {% endblock %}
+</div>
+{% endblock %}
