--- a/app/views/v2/provider/api/no-permission.html
+++ b/app/views/v2/provider/api/no-permission.html
@@ -1,7 +1,7 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-You do not have permission to access this page - Manage apprenticeships - GOV.UK
+You do not have permission to access this page - Apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
