--- a/app/views/v2/provider/api/api-hub-new-key.html
+++ b/app/views/v2/provider/api/api-hub-new-key.html
@@ -1,7 +1,7 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-API key renewed - API hub - Apprenticeships - GOV.UK
+API key renewed - Apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -18,7 +18,7 @@ API key renewed - API hub - Apprenticeships - GOV.UK
       titleText: "Key renewed",
       html: ""
     }) }}
-        <h1 class="govuk-heading-xl">Create keys for APIs</h1>
+        <h1 class="govuk-heading-xl govuk-!-margin-top-6">Create key for API</h1>
           <p class="govuk-body">
             You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
           </p>
@@ -37,8 +37,8 @@ API key renewed - API hub - Apprenticeships - GOV.UK
             </header>
             <div class="app-summary-card--content">
               <p class="govuk-body">
-                Create a vacancy on any website and Find an apprenticeship.<br>
-                Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
+                Create an advert on any website and Find an apprenticeship.<br>
+                Give the key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
               </p>
               <dl class="govuk-summary-list govuk-summary-list__m">
                 <div class="govuk-summary-list__row">
@@ -53,17 +53,7 @@ API key renewed - API hub - Apprenticeships - GOV.UK
                       Copy<span class="govuk-visually-hidden"> key</span>
                     </a>
                   </dd>
-                </div>            
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Key name
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    recruitment-api-live
-                  </dd>
-                  <dd class="govuk-summary-list__value">                
-                  </dd>
-                </div>
+                </div>                            
               </dl>
               <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
@@ -76,102 +66,7 @@ API key renewed - API hub - Apprenticeships - GOV.UK
                 </div>
               </details>
             </div>
-          </div>
-          <div class="app-summary-card ">
-            <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Recruitment API (Sandbox)</h3>
-              <div class="app-summary-card__actions">
-              </div>
-            </header>
-            <div class="app-summary-card--content">
-              <p class="govuk-body">
-                Test creating a vacancy on any website and Find an apprenticeship.<br>
-                Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
-              </p>
-              <dl class="govuk-summary-list govuk-summary-list__m">
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    API key
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    <code style="color:darkred; font-size:14px;">79cfbdeb64f14277ac33d4dd06640dfg</code>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">
-                      Copy<span class="govuk-visually-hidden"> key</span>
-                    </a>
-                  </dd>
-                </div>            
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Key name
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    recruitment-api-sandbox
-                  </dd>
-                  <dd class="govuk-summary-list__value">                
-                  </dd>
-                </div>
-              </dl>
-              <details class="govuk-details" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                  <span class="govuk-details__summary-text">
-                    Do you need a new key?
-                  </span>
-                </summary>
-                <div class="govuk-details__text">
-                  <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renewing the key</a> will disable the previous key and will stop your API from working until you use the new key.
-                </div>
-              </details>
-            </div>
-          </div>
-          <div class="app-summary-card ">
-            <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Display Advert API (Live)</h3>
-              <div class="app-summary-card__actions">
-              </div>
-            </header>
-            <div class="app-summary-card--content">
-              <p class="govuk-body">
-                Display recruitment vacancies from Find an apprenticeship.<br>
-                Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
-              </p>
-              <dl class="govuk-summary-list govuk-summary-list__m">
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    API key
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    <code style="color:darkred; font-size:14px;">32cfbdeb64f14277ac33d4dd06640ilj</code>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">
-                      Copy<span class="govuk-visually-hidden"> key</span>
-                    </a>
-                  </dd>
-                </div>            
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Key name
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    display-advert-api
-                  </dd>
-                  <dd class="govuk-summary-list__actions"></dd>
-                </div>
-              </dl>
-              <details class="govuk-details" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                  <span class="govuk-details__summary-text">
-                    Do you need a new key?
-                  </span>
-                </summary>
-                <div class="govuk-details__text">
-                  <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renewing the key</a> will disable the previous key and will stop your API from working until you use the new key.
-                </div>
-              </details>
-            </div>
-          </div>
+          </div>          
        </div>
     </div>
   </div>
