#128 API subscriptions and #129 API permissions

--- a/app/views/v2/employer/api/api-hub.html
+++ b/app/views/v2/employer/api/api-hub.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-API key copied - API hub - Manage apprenticeships - GOV.UK
+Create keys for APIs - Manage apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
